--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 URI="mongodb://127.0.0.1:27017/test"
-JWT="W5bAF0L1kSAUcdLIG2EXtY9sm9Pik2mCMzY+Bs79BHE="
+JWT="W5bAF0L1kSAUcdLIG2EXtY9sm9Pik2mCMzY+Bs79BHE="  // you can generate your own ssh key
